# MachineLearningMarchMadness

./: .gitignore  MachineLearningMarchMadness.yml  MachineLearningMarchMadnessV1.ipynb  MachineLearningMarchMadnessV2.ipynb  Pipfile  README.md  TODO.md  Team Stats.docx  games.csv  main.py  pyproject.toml  requirements.txt  shared.py  team_yearly_stats.csv
Notebooks/: Machine Learning March Madness.ipynb  MachineLearningMarchMadnessV1.ipynb  MachineLearningMarchMadnessV2.ipynb  game_records.csv  model_nn1.pt  school_records.csv  shared.py
Notebooks/.ipynb_checkpoints/: MachineLearningMarchMadnessV1-checkpoint.ipynb  MachineLearningMarchMadnessV2-checkpoint.ipynb
Scraper/: game_records.csv  games.csv  post_season_game_records.csv  post_season_games.csv  school_records.csv  scrape.py  scraper.py  team_yearly_stats.csv
Scraper/Code/: scrape.py
Scraper/Data/: game_records.csv  school_records.csv
data/: games.csv  games_new.csv  post_season_games.csv  post_season_games_new.csv  team_yearly_stats.csv  team_yearly_stats_new.csv
newFOlder/: data.py  old_backets.py
results/: 2018.md  2019.md  2020.md  2021.md  2022.md  2026.md
scraper/: data.py  scraper.py
