[tool.poetry]
name = "machinelearningmarchmadness"
version = "0.1.1"
description = "Predictive solution for NCAA basketball tournament"
authors = ["Nick Purcell"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
jupyter = "*"
pandas = "^1.2.3"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
scikit-learn =  "^1.2.2"
joblib = "^1.0.1"
chromedriver-py = "111.0.5563.64"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
