[project]
name = "machinelearningmarchmadness"
version = "0.1.1"
description = "Predictive solution for NCAA basketball tournament"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromedriver-py>=143.0.7499.169",
    "joblib>=1.0.1",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.3.4",
    "numpy>=1.20.1",
    "pandas>=1.2.3",
    "scikit-learn>=1.2.2",
    "selenium>=3.141.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=20.8b1",
    "pytest>=6.2.2",
]
